frontend/envoy/envoy.yaml
node:
  cluster: nersonic-frontend
  id: nersonic-frontend

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc_ingress
                codec_type: AUTO
                http2_protocol_options: {}
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: grpc_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: nersonic-triton-server
                            timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: nersonic-triton-server
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      type: EDS
      http2_protocol_options: {}
      eds_cluster_config:
        eds_config:
          resource_api_version: V3
          path_config_source:
            path: "/opt/nersonic/envoy/endpoints.yaml"
